Set the background to black and change the font styles of the text

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,12 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+html, *{
+    font-family: 'Press Start 2P', cursive, sans-serif;
+    color: white;
+    background-color: black;
+}
+
 .scoreBoard{
     display: flex;
     justify-content: space-around;
